--- a/css/grid_normVersion.css
+++ b/css/grid_normVersion.css
@@ -99,10 +99,86 @@ ul,li{
 }
 
 
+                                                            /* breadcrams */
+
+.breadcrams{
+    width: 100%;
+    height: 60px;
+    background-color: rgba(245, 245, 245, 1);
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.breadcrams-wrapper{
+    width: 131px;
+    height: 14px;
+    /* margin:21px auto 25px auto; */
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.breadcrams-point{
+    width: 1px;
+    height: 1px;
+    border-radius: 50%;
+}
+
+.Info1-topBackground{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(245, 245, 245, 1);
+}
+
+h1{
+    margin: 0;
+}
+                                                                 /* Info1 */
+
 
                                                 /* разметка при размере экрана меньше  1320px*/
 
 @media(max-width:1320px){
+
+    /* .header-logo{
+    
+    } */
+
+    .header-article1{
+        width: 499px;
+        /* width: 268px; */
+        height: 23px;
+    }
+
+    .header-article1-list{
+        width: 408px;
+        /* width: 197px; */
+        height: 20px;
+    }
+
+    .header-article2{
+        width: 232px;
+        margin-right: auto;
+    }
+
+    .header-article2-registerButton{
+        display:none;
+    }
+}
+
+                                                            /* разметка при размере экрана меньше  1150px*/
+
+@media(max-width:1150px){
+
+    .header-article1-item:last-child{
+        display:none;
+    }
+    
     .header-article1{
         width: 268px;
         height: 23px;
@@ -115,18 +191,12 @@ ul,li{
 
     .header-article2{
         width: 232px;
+        margin-right:0;
     }
-
-    .header-article2-registerButton{
-        display:none;
-    }
+    
 }
 
-
-
-
-
-
+                                                            /* разметка при размере экрана меньше  768px*/
 
 @media(max-width:768px){
     .header-article1{
@@ -148,10 +218,9 @@ ul,li{
 }
 
 
-
 @media(max-width:480px){
+    .page-header{                                            /* разметка при размере экрана меньше  480px*/
 
-    .page-header{
         min-width: 300px;
     }
 
@@ -171,3 +240,21 @@ ul,li{
         display: none;
     }
 }
+
+                                            /* разметка при размере экрана меньше  360px*/
+                                                                        
+
+@media(max-width:360px){
+    .header-logo img{
+        width:67.03px;
+        height: 40px;
+    }
+}
+
+
+
+
+
+
+
+
