--- a/css/grid_normVersion.css
+++ b/css/grid_normVersion.css
@@ -14,6 +14,27 @@ ul,li{
     padding: 0;
 }
 
+#map-container {
+        position: relative;
+        width: 100%;
+        height: 400px;
+    }
+    #map {
+        width: 100%;
+        height: 100%;
+    }
+    .map-grayscale-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+        mix-blend-mode: saturation;
+        pointer-events: none;
+        z-index: 100;
+    }
+
 
 
                                                 /* header */
@@ -156,10 +177,11 @@ h1{
     padding:0 25px;
 }                                                     
 
-.Info1-Part1{
-    width: 607px;
+.-Part1{
+    width: 659px;
     height: 492px;
-    margin-right:52px;
+    padding-right: 52px;
+    margin-right:auto;
 }
 
 .Info1-Part1-number{
@@ -197,6 +219,7 @@ h1{
 .Info1-Part2{
     width: 630px;
     height: 395px;
+    margin-left: auto;
 }
                                             
 .Info1-Part2 h2{
