--- a/css/style.css
+++ b/css/style.css
@@ -426,3 +426,46 @@ input[name = "Ask-button"]{
     }
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#myMap {
+    width: 100%;
+    height: 400px;
+}
+
