--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,14 @@ input[name = "Ask-button"]{
     line-height: 120%;
 }
 
+                                         /* section map */
+
+.map{
+    filter: grayscale(100%) contrast(100%)
+}
+
+
+
                                                 /* section cities */
 
 .cities-item h2{
@@ -182,24 +190,24 @@ input[name = "Ask-button"]{
 .cities-item h2{
     font-family: "RoadRadio";
     font-size: 26px;
-    line-height: 110px;
+    line-height: 110%;
 }
 
 .cities-item-number1 , .cities-item-number2{
     font-size: 19px;
-    line-height: 150%;
+    line-height: 110%;
 }
 
 .cities-item address{
     font-style: normal;
     font-size: 14px;
-    line-height: 140px;
+    line-height: 140%;
     color:rgba(121, 121, 134, 1);
 }
 
 .cities-item a{
     font-size: 14px;
-    line-height: 140px;
+    line-height: 140%;
     color:rgba(191, 39, 56, 1);
 }
 
@@ -430,42 +438,4 @@ input[name = "Ask-button"]{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#myMap {
-    width: 100%;
-    height: 400px;
-}
 
